--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,16 @@ header .subtitulo{
     text-align: center;
 }
 
+a{
+    text-decoration: none;
+    color: #eee;
+    transition: 200ms;
+}
+
+a:hover{
+    transform: scale(1.3)
+}
+
 aside{
     padding: 1rem;
     padding-top: 3rem;
